<resources>
    <string name="app_name">LEARNR</string>
    <string name="rnr">Learn with RNR</string>
    <string name="video">Videos</string>
    <string name="months">Monthly Newsletter</string>
    <string name="b_a">Blogs &amp; Articles</string>
    <string name="ann">Announcements</string>
    <string name="monthly">Monthly Research</string>
    <string name="start_now">Start now</string>
    <string name="watch_now">Watch now</string>
    <string name="Read_now">Read now</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="explore">Explore</string>
    <string name="demo_text"> It is a place where shares of pubic listed companies are traded. A stock exchange facilitates stock brokers to trade company stocks and other securities. \nA stock may be bought or sold only if it is listed on an exchange.
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





</resources>